<resources>
    <string name="app_name">
        خوشحالی سنج
    </string>
    <string name="washappy">
        <b>
            چقدر خوشحال بوده ام؟
        </b>

    </string>
    <string name="areyouhappy">
        چقدر خوشحالی؟
    </string>
    <string name="sabt">
        ثبت
    </string>
    <string name="sabtshod">
<b>
        ثبت شد
</b>

    </string>
    <string name="darhalesabt">
<b>
در حال ثبت
</b>

    </string>
    <string name="deleteeverything">
        همه اطلاعات را پاک کن
    </string>
    <string name="saat">
        ساعت
    </string>
    <string name="daghighe">
دقیقه
    </string>
    <string name="day">
روز
    </string>
    <string-array name="vahedezaman">
    <item>@string/daghighe</item>
    <item>@string/saat</item>
    <item>@string/day</item>
    <item>@string/maah</item>
</string-array>


 <string name="amarsaat">
        در یک روز
    </string>
    <string name="amardaghighe">
به طور کلی
    </string>
    <string name="amarday">
در یک ماه
    </string>

    <string-array name="chekasi">
        <item>@string/man</item>
        <item>@string/kol</item>
        <item>@string/region</item>
    </string-array>
    <string name="nodata">
        داده ای برای ترسیم وجود ندارد.
    </string>
    <string name="amar">
میانگین خوشحالی
    </string>
    <string name="tarikhche">
روند خوشحالی
    </string>
     <string name="cheghadrkhoshhaliHint">
چقدر خوشحال هستم؟
صفر ستاره یعنی بسیار ناراحت و پنج یعنی
         بسیار
         خوشحال
         . بعدازانتخاب
ستاره ها،
         روی دکمه ثبت کلیک کنید
    </string>
    <string name="activitytitle1">
سیبی
    </string>
    <string name="AreYouSureTitle">
        پاک کردن داده
    </string>
    <string name="ok">
بله
    </string>
    <string name="cancel">
        خیر
    </string>
    <string name="AreYouSureDelete">
        آیا مطمئنی می خواهی همه اطلاعات را پاک کنی؟
    </string>
    <string name="deleteshod">
        همه اطلاعات پاک شد
    </string>
    <string name="tanzimat">
        تنظیمات
    </string>
    <string name="whereami">
        مکانم را روی نقشه نشان بده
    </string>
<string name="updatemyplace">
        مکانم را به روز کن
    </string>
     <string name="sp1">
        خانواده
    </string>
    <string name="sp0">
        دلیل ناراحتی یا خوشحالی؟
    </string>
     <string name="sp2">
سلامتی
    </string>
     <string name="sp3">
دوستان
    </string>
     <string name="sp4">
ورزشی
    </string>
     <string name="sp5">
برنامه تلویزیون غیر ورزش
    </string>
     <string name="sp6">
شغل و درآمد
    </string>
    <string name="sp7">
خستگی
    </string>
    <string name="sp8">
هیچکدام
    </string>
    <string name="sp9">
عشقی
    </string>












    <string name="dalil">
دلیل ناراحتی یا خوشحالی را انتخاب کن
    </string>
    <string-array name="planets_array">
         <item>
 @string/sp0
        </item>
        <item>
            @string/sp1
        </item>
         <item>
            @string/sp2
        </item>
         <item>
            @string/sp3
        </item>
         <item>
            @string/sp4
        </item>
         <item>
            @string/sp5
        </item>
         <item>
            @string/sp6
        </item>
         <item>
            @string/sp7
        </item>
         <item>
            @string/sp8
        </item>
 <item>
            @string/sp9
        </item>
    </string-array>
<string name="chera">
    دلیل روحیه
</string>
      <string name="notchosen">
انتخاب نشده
    </string>
    <string name="man">من</string>
    <string name="kol">
        کل ایران
    </string>
    <string name="region">
        استان من
    </string>
    <string name="azyekmahepish">از یک ماه پیش</string>
    <string name="hamezamanha">همه زمان ها</string>
    <string name="azyekhaftepish">از یک هفته پیش</string>

    <string name="PersAmarDay">
        چقدر در طول ساعت های یک روز خوشحال بوده ام
    </string>

<string name="IranAmarDay">
        کل ایران در طول روز چقدر خوشحال است
    </string>
    <string name=
                "Why1">
        عوامل تاثیرگذار در روحیه من
    </string>
    <string name=
                "Why2">
        عوامل تاثیرگذار در روحیه ایرانی ها
    </string>
    <string name="TSPersThisWeek">این هفته چقدر خوشحال بوده ام</string>
    <string name="TSWThisWeek">ایران این هفته چقدر خوشحال بود</string>

    <string name="mizankhoshhali">
        میزان خوشحالی
    </string>


    <string name="TSOstanThisWeek">
        استان من این هفته چقدر خوشحال بود
    </string>


    <string-array name="conv_array">

         <item>
            میزان خوشحالی ام به طور کلی
        </item>
        <item>
میزان خوشحالی ایرانی ها به طور کلی
        </item>
        <item>
میزان خوشحالی استان من به طور کلی
        </item>
        <item>
            @string/PersAmarDay
        </item>
         <item>
            @string/IranAmarDay
        </item>
         <item>
            @string/Why1
        </item>
         <item>
            @string/Why2
        </item>
         <item>
            @string/TSPersThisWeek
        </item>
         <item>
            @string/TSWThisWeek
        </item>
 <item>
            @string/TSOstanThisWeek
        </item>

    </string-array>
<string name="parirooz">
    پریروز
</string>
     <string name="khoshhali">
    میزان خوشحالی
</string>
    <string name="dartoole">
    در طول
</string>
    <string name="khoshhalidartoole">
    خوشحالی در طول
</string>
      <string name="haiemontahibealan">
 های مختلف منتهی به این لحظه
    </string>
       <string name="commentzirenemoodarTS">
 هر چه به سمت راست نمودار می رویم به امروز نزدیک تر می شویم
    </string>
    <string name="emrooz">امروز</string>
    <string name="dirooz">دیروز</string>
    <string name="amarcommentgraph1">
        میزان خوشحالی در
    </string>
        <string name="amarcommentgraph2">
های مختلف یک
    </string>
    <string name="maah">ماه</string>
    <string name="miangin">
        (به طور میانگین)
    </string>
    <string name="shab">شب</string>
    <string name="zohr">ظهر</string>
    <string name="sobh">صبح</string>
    <string name="ghoroob">غروب</string>
    <string name="avamel">عوامل تاثیرگذار در روحیه</string>
    <string name="chooseostan">استان خود را انتخاب کنید</string>
    <string name="selectyourostan">استان خود را انتخاب کنید</string>
    <string name="WorkOffline">
        قطع کردن اینترنت
    </string>
    <string name="time_between_uploads_minute">
        حداقل زمان بین آپلودها ( دقیقه):
    </string>
    <string name="time_between_downloads_minute">
        حداقل زمان بین دانلودها (دقیقه):
    </string>
    <string name="ForceUpload">
        آپلود بعد از  ثبت
    </string>
    <string name="x">
        آپدیت داده
    </string>
    <string-array name="ostanha">
    <item>
        تهران
    </item>
        <item>
            اصفهان
        </item>

        <item>
            آذربایجان شرقی
        </item>

        <item>
آذربایجان غربی
        </item>

        <item>
اردبیل
        </item>

        <item>
البرز
        </item>

        <item>
ایلام
        </item>

        <item>
بوشهر
        </item>

        <item>
چهارمحال و بختیاری
        </item>

        <item>
خراسان جنوبی
        </item>

        <item>
خراسان رضوی
        </item>

        <item>
خراسان شمالی
        </item>

        <item>
خوزستان
        </item>
        <item>
زنجان
        </item>
        <item>
سمنان
        </item>
        <item>
سیستان و بلوچستان
        </item>
        <item>
فارس
        </item>
        <item>
قزوین
        </item>
    <item>
قم
        </item>
         <item>
کردستان
        </item>

            <item>
کرمان
        </item>

              <item>
کرمانشاه
        </item>


            <item>
کهکیلویه و بویراحمد
        </item>

          <item>
گلستان
        </item>

            <item>
گیلان
        </item>
        <item>
لرستان
        </item>


            <item>
مازندران
        </item>

        <item>
مرکزی
        </item>
            <item>
هرمزگان
        </item>

          <item>
همدان
        </item>

            <item>
یزد
        </item>
        <item>

خارج از کشور
            </item>
    </string-array>
</resources>
