<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_centerInParent="true"
    android:gravity="center_vertical|center_horizontal"
    android:weightSum="1"
    android:background="#ffffff">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical|center|center_horizontal">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cheghadrkhoshhaliHint"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="17sp"
            android:textColor="#000000" />

        <RatingBar
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:focusableInTouchMode="true"
            android:stepSize="1"
            android:numStars="10"
            android:focusable="false"
            android:mirrorForRtl="false"
            android:nestedScrollingEnabled="false" />


    </LinearLayout>
    <!--<include
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        layout="@layout/areyouhappy"
        />
    --><LinearLayout
        android:orientation="vertical"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
    >

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/spinner"
        android:prompt="@string/dalil"
        />

    <Button
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:text="@string/sabt"
        android:id="@+id/sabt"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_weight="0"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
    android:background="@color/colorAccent"
        />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/washappy"
            android:id="@+id/washappy"
            android:layout_weight="0"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/colorPrimary"
            android:textSize="15sp"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.46">
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/Why1"
            android:id="@+id/Why1"
            android:background="@color/colorPrimary"
            android:textSize="15sp"/>
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/IranAmarDay"
            android:id="@+id/IranAmarDay"
            android:layout_weight="0"
            android:background="@color/colorPrimary"
            android:textSize="15sp"/>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/PersAmarDay"
            android:id="@+id/PersAmarDay"
            android:layout_weight="0"
            android:background="@color/colorPrimary"
            android:textSize="15sp"/>
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/Why2"
            android:id="@+id/Why2"
            android:layout_weight="0"
            android:background="@color/colorPrimary"
            android:textSize="15sp"/>
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/TSPersThisWeek"
            android:id="@+id/TSPersThisWeek"
            android:layout_weight="0"
            android:background="@color/colorPrimary"
            android:textSize="15sp"/>
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/TSWThisWeek"
            android:id="@+id/TSWThisWeek"
            android:layout_weight="0"
            android:background="@color/colorPrimary"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_gravity="bottom|center"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanzimat"
            android:id="@+id/tanzimat"
            android:layout_alignParentRight="true"
            />

    </LinearLayout>

        </LinearLayout>



</LinearLayout>