<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
              android:padding="10dp">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectyourostan"
        android:id="@+id/selectyourostanbutton"
        style="@style/MyButtonStyle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@color/Toosi"
        android:textColor="@android:color/black"
        android:layout_alignParentRight="true"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteeverything"
        android:id="@+id/deleteeverything"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentLeft="true"
        android:background="@color/Toosi"
        android:textColor="@android:color/black"
        style="@style/MyButtonStyle"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/time_between_uploads_minute"
                android:background="@color/Toosi"
                android:textColor="@android:color/black"
                android:id="@+id/textView4"
                style="@style/MyButtonStyle"

                android:layout_gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="10"
                android:inputType="number"
                style="@style/MyButtonStyle"
                android:id="@+id/textViewUploadMinute"
                android:layout_weight="1"

                />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/time_between_downloads_minute"
                android:id="@+id/textView3"
                style="@style/MyButtonStyle"
                android:background="@color/Toosi"
                android:textColor="@android:color/black"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="20"
                android:inputType="number"
                android:id="@+id/textViewDownloadMinute"
                style="@style/MyButtonStyle"
                android:layout_weight="1"

                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal">


        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WorkOffline"
            android:id="@+id/WorkOffline"
            android:layout_gravity="center_horizontal"/>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I'm Master"
            android:id="@+id/ImMaster"


            />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ForceUpload"
            android:id="@+id/ForceUpload"/>
    </LinearLayout>



</LinearLayout>